[tool.poetry]
name = "spy-cat-agency"
version = "0.1.0"
description = ""
authors = ["Vitalii Lutsyk <vitaliilutsyk9895@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
